# siard-sqlite

./: README.md  create_test_siard.py  debug_siard.py  pyproject.toml  siard-convert  siard2sqlite  siard_converter.py  test_database.siard
siard_sqlite/: __init__.py
