[project]
name = "siard-sqlite"
version = "0.1.0"
description = "Convert SIARD files to SQLite databases for analysis and exploration"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Henrik Vitalis", email = "henrik.vitalis@vitalibus.se" },
]
maintainers = [
    { name = "Henrik Vitalis", email = "henrik.vitalis@vitalibus.se" },
]
keywords = [
    "siard",
    "sqlite", 
    "database",
    "converter",
    "archive",
    "xml",
    "data-analysis",
    "data-migration"
]
classifiers = [
    "DDevelopment Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "lxml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/svkau/siard-sqlite"
Documentation = "https://github.com/svkau/siard-sqlite#readme"
Repository = "https://github.com/svkau/siard-sqlite"
Issues = "https://github.com/svkau/siard-sqlite/issues"
Changelog = "https://github.com/svkau/siard-sqlite/releases"

[project.scripts]
siard-convert = "siard_sqlite:main"
siard2sqlite = "siard_sqlite:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "twine>=6.1.0",
]
